--- a/src/components/ArchivePanel.astro
+++ b/src/components/ArchivePanel.astro
@@ -82,11 +82,11 @@ function formatTag(tag: string[]) {
                        class="group btn-plain !block h-10 w-full rounded-lg hover:text-[initial]"
                     >
                         <div class="flex flex-row justify-start items-center h-full">
-                            <!-- date -->
+                            { /* date */ }
                             <div class="w-[15%] md:w-[10%] transition text-sm text-right text-50">
                                 {formatDate(post.data.published)}
                             </div>
-                            <!-- dot and line -->
+                            { /* dot & line */ }
                             <div class="w-[15%] md:w-[10%] relative dash-line h-full flex items-center">
                                 <div class="transition-all mx-auto w-1 h-1 rounded group-hover:h-5
                                 bg-[oklch(0.5_0.05_var(--hue))] group-hover:bg-[var(--primary)]
@@ -97,14 +97,14 @@ function formatTag(tag: string[]) {
                                 "
                                 ></div>
                             </div>
-                            <!-- post title -->
+                            { /* post & title */ }
                             <div class="w-[70%] md:max-w-[65%] md:w-[65%] text-left font-bold
                                 group-hover:translate-x-1 transition-all group-hover:text-[var(--primary)]
                                 text-75 pr-8 whitespace-nowrap overflow-ellipsis overflow-hidden"
                             >
                                     {post.data.title}
                             </div>
-                            <!-- tag list -->
+                            { /* tag list */ }
                             <div class="hidden md:block md:w-[15%] text-left text-sm transition
                             whitespace-nowrap overflow-ellipsis overflow-hidden
                             text-30"
