--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
-import { profileConfig } from "../config";
-import { url } from "../utils/url-utils";
-const currentYear = new Date().getFullYear();
+import { profileConfig } from '../config'
+import { url } from '../utils/url-utils'
+const currentYear = new Date().getFullYear()
 ---
 
 <!--<div class="border-t border-[var(&#45;&#45;primary)] mx-16 border-dashed py-8 max-w-[var(&#45;&#45;page-width)] flex flex-col items-center justify-center px-6">-->
@@ -16,7 +16,7 @@ const currentYear = new Date().getFullYear();
   <div class="transition text-50 text-sm text-center">
     &copy; <span id="copyright-year">{currentYear}</span>
     {profileConfig.name}. All Rights Reserved. /
-    <a
+    <!-- <a
       class="transition link text-[var(--primary)] font-medium"
       target="_blank"
       href={url("rss.xml")}>RSS</a
@@ -24,8 +24,8 @@ const currentYear = new Date().getFullYear();
     <a
       class="transition link text-[var(--primary)] font-medium"
       target="_blank"
-      href={url("sitemap-index.xml")}>Sitemap</a
-    ><br />
+      href={url("sitemap-index.xml")}>Sitemap</a -->
+    <br />
     Powered by
     <a
       class="transition link text-[var(--primary)] font-medium"
